--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -135,5 +135,6 @@
   "mn35:20.8": "“Sofferenza.”",
   "mn35:20.9": "“Ma se è impermanente, sofferenza, e soggetta a decadere, è adatta ad essere considerata così:",
   "mn35:20.10": "‘Questo è mio, io sono questo, questo è il mio sé’?”",
-  "mn35:20.11": "“No, Maestro Gotama.”"
+  "mn35:20.11": "“No, Maestro Gotama.”",
+  "mn35:20.12": "Cosa ne pensi, Aggivessana?"
 }
