--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -137,5 +137,6 @@
   "mn35:20.10": "‘Questo è mio, io sono questo, questo è il mio sé’?”",
   "mn35:20.11": "“No, Maestro Gotama.”",
   "mn35:20.12": "Cosa ne pensi, Aggivessana?",
-  "mn35:20.13": "La sensazione …"
+  "mn35:20.13": "La sensazione …",
+  "mn35:20.14": "La percezione …"
 }
