--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -138,5 +138,6 @@
   "mn35:20.11": "“No, Maestro Gotama.”",
   "mn35:20.12": "Cosa ne pensi, Aggivessana?",
   "mn35:20.13": "La sensazione …",
-  "mn35:20.14": "La percezione …"
+  "mn35:20.14": "La percezione …",
+  "mn35:20.15": "L’intenzione …"
 }
