--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -139,5 +139,6 @@
   "mn35:20.12": "Cosa ne pensi, Aggivessana?",
   "mn35:20.13": "La sensazione …",
   "mn35:20.14": "La percezione …",
-  "mn35:20.15": "L’intenzione …"
+  "mn35:20.15": "L’intenzione …",
+  "mn35:20.16": "La coscienza è permanente o impermanente?”"
 }
