--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -140,5 +140,6 @@
   "mn35:20.13": "La sensazione …",
   "mn35:20.14": "La percezione …",
   "mn35:20.15": "L’intenzione …",
-  "mn35:20.16": "La coscienza è permanente o impermanente?”"
+  "mn35:20.16": "La coscienza è permanente o impermanente?”",
+  "mn35:20.17": "“Impermanente.”"
 }
