--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -141,5 +141,7 @@
   "mn35:20.14": "La percezione …",
   "mn35:20.15": "L’intenzione …",
   "mn35:20.16": "La coscienza è permanente o impermanente?”",
-  "mn35:20.17": "“Impermanente.”"
+  "mn35:20.17": "“Impermanente.”",
+  "mn35:20.18": "“Ma se è impermanente, è sofferenza o gioia?”",
+  "mn35:20.19": "“Sofferenza.”"
 }
