--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -143,5 +143,6 @@
   "mn35:20.16": "La coscienza è permanente o impermanente?”",
   "mn35:20.17": "“Impermanente.”",
   "mn35:20.18": "“Ma se è impermanente, è sofferenza o gioia?”",
-  "mn35:20.19": "“Sofferenza.”"
+  "mn35:20.19": "“Sofferenza.”",
+  "mn35:20.20": "“Ma se è impermanente, sofferenza, e soggetta a decadere, è adatta ad essere considerata così:"
 }
