Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -145,5 +145,6 @@
   "mn35:20.18": "“Ma se è impermanente, è sofferenza o gioia?”",
   "mn35:20.19": "“Sofferenza.”",
   "mn35:20.20": "“Ma se è impermanente, sofferenza, e soggetta a decadere, è adatta ad essere considerata così:",
-  "mn35:20.21": "‘Questo è mio, io sono questo, questo è il mio sé’?”"
+  "mn35:20.21": "‘Questo è mio, io sono questo, questo è il mio sé’?”",
+  "mn35:20.22": "“No, Maestro Gotama.”"
 }
