--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -148,5 +148,6 @@
   "mn35:20.21": "‘Questo è mio, io sono questo, questo è il mio sé’?”",
   "mn35:20.22": "“No, Maestro Gotama.”",
   "mn35:21.1": "“Cosa ne pensi, Aggivessana?",
-  "mn35:21.2": "Considera una persona che si aggrappa, trattiene e si attacca alla sofferenza, considerandola così: ‘Questo è mio, io sono questo, questo è il mio sé.’ Una persona del genere sarebbe in grado di comprendere completamente la sofferenza lei stessa, o di vivere avendo spazzato via la soffrenza?”"
+  "mn35:21.2": "Considera una persona che si aggrappa, trattiene e si attacca alla sofferenza, considerandola così: ‘Questo è mio, io sono questo, questo è il mio sé.’ Una persona del genere sarebbe in grado di comprendere completamente la sofferenza lei stessa, o di vivere avendo spazzato via la soffrenza?”",
+  "mn35:21.3": "“Come potrebbe?"
 }
