--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -151,5 +151,6 @@
   "mn35:21.2": "Considera una persona che si aggrappa, trattiene e si attacca alla sofferenza, considerandola così: ‘Questo è mio, io sono questo, questo è il mio sé.’ Una persona del genere sarebbe in grado di comprendere completamente la sofferenza lei stessa, o di vivere avendo spazzato via la sofferenza?”",
   "mn35:21.3": "“Come potrebbe?",
   "mn35:21.4": "No, Maestro Gotama.”",
-  "mn35:21.5": "“Cosa ne pensi, Aggivessana?"
+  "mn35:21.5": "“Cosa ne pensi, Aggivessana?",
+  "mn35:21.6": "Dato che le cose stanno così, tu non sei uno che si aggrappa, trattiene e si attacca alla sofferenza, considerandola così: ‘Questo è mio, io sono questo, questo è il mio sé.’?”"
 }
