--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -153,5 +153,6 @@
   "mn35:21.4": "No, Maestro Gotama.”",
   "mn35:21.5": "“Cosa ne pensi, Aggivessana?",
   "mn35:21.6": "Dato che le cose stanno così, tu non sei uno che si aggrappa, trattiene e si attacca alla sofferenza, considerandola così: ‘Questo è mio, io sono questo, questo è il mio sé.’?”",
-  "mn35:21.8": "“Come non potrei?"
+  "mn35:21.8": "“Come non potrei?",
+  "mn35:21.9": "Sì, Maestro Gotama.”"
 }
