Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -236,7 +236,7 @@
   "dn34:1.6.66": "This is declared to be the way out of embodied personality.",
   "dn34:1.6.67": "These are the five things that are hard to penetrate.",
   "dn34:1.6.68": "What are the five things that are to be encouraged?",
-  "dn34:1.6.69": "The five Right Collectedness (XXXHOW CAN FIVE \"samādhi\" BE SINGULAR?XXX) accompanied with knowledge:",
+  "dn34:1.6.69": "The five Right Collectedness accompanied with knowledge:",
   "dn34:1.6.70": "The first-hand knowledge arises: ‘This collectedness is pleasant now and will also result in pleasure in the future.’",
   "dn34:1.6.71": "The first-hand knowledge arises: ‘This collectedness is noble and metaphysical.’",
   "dn34:1.6.72": "The first-hand knowledge arises: ‘This collectedness is associated with exceptional people.’",
