Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -316,7 +316,7 @@
   "dn34:1.7.40": "ill will could still persist in taking hold of one's mind. That is not a possibility.",
   "dn34:1.7.41": "Indeed, friend, freedom of mind through loving-kindness is the way out of ill will.’",
   "dn34:1.7.42": "Or, here, a monk might speak thus:",
-  "dn34:1.7.43": "‘Truly, freedom of mind through compassion (XXXMETTā IS NOT INSTRUMENTAL?XXX) is, for me, cultivated, exercised, deeply experienced, fortified, and undertaken well. It has been made (XXXHOW ABOUT \"BECOME\" HERE FOR \"KATA\"?XXX) my vehicle and my foundation. (XXXCOULD I TRANSLATE THE GENATIVE \"ME\" HERE AS \"I HAVE\"? - Truly, I have cultivated freedom of mind through compassion. I have exercised it, deeply experienced it, fortified it, and undertaken it well. I have made it my vehicle and my foundation.XXX)",
+  "dn34:1.7.43": "‘Truly, freedom of mind through compassion is, for me, cultivated, exercised, deeply experienced, fortified, and undertaken well. It has been made my vehicle and my foundation. (XXXCOULD I TRANSLATE THE GENATIVE \"ME\" HERE AS \"I HAVE\"? - Truly, I have cultivated freedom of mind through compassion. I have exercised it, deeply experienced it, fortified it, and undertaken it well. I have made it my vehicle and my foundation.XXXYES!)",
   "dn34:1.7.44": "But still, thoughts of harming persist in taking hold of my mind.’",
   "dn34:1.7.45": "He should be spoken to thus: ‘Venerable, don't speak thus! Do not misrepresent the Blessed One. Misrepresenting the Blessed One is not good. Surely the Blessed One would not speak thus! ...",
   "dn34:1.7.46": "Indeed, friend, freedom of mind through compassion is the way out of thought of harming.’",
