Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -332,7 +332,7 @@
   "dn34:1.7.56": "Indeed, friend, freedom of mind through stoic composure is the way out of passion.’",
   "dn34:1.7.57": "Or, here, a monk might speak thus:",
   "dn34:1.7.58": "‘Truly, I have cultivated objectless freedom of mind ...",
-  "dn34:1.7.59": "But still, my consciousness follows after the object.’ (XXXWHAT DOES \"me\"MODIFY? \"viññāṇaṃ\" OR \"nimmitā\"?)",
+  "dn34:1.7.59": "But still, my consciousness follows after the object.’",
   "dn34:1.7.60": "He should be spoken to thus: ‘Venerable, don't speak thus! Do not misrepresent the Blessed One ...",
   "dn34:1.7.61": "Indeed, friend, objectless freedom of mind is the way out of all objects.’",
   "dn34:1.7.62": "Or, here, a monk might speak thus:",
