Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -339,7 +339,7 @@
   "dn34:1.7.63": "‘For me, “I am” is gone. I do not see “I am this this.”",
   "dn34:1.7.64": "But still, the dart of apprehension, doubt, and uncertainty persists in taking hold of my mind.’",
   "dn34:1.7.65": "He should be spoken to thus: ‘Venerable, don't speak thus! Do not misrepresent the Blessed One. Misrepresenting the Blessed One is not good. Surely the Blessed One would not speak thus!",
-  "dn34:1.7.66": "Friend, it is not possible, there is no way, when “I am” is gone, not seeing “I am this this.”, that (XXXIS \"asamanupassato\" singular, Nom pres.part - \"not seeing\"?XXX)",
+  "dn34:1.7.66": "Friend, it is not possible, there is no way, when “I am” is gone, for one not seeing “I am this”, that",
   "dn34:1.7.67": "the dart of apprehension, doubt, and uncertainty could still persist in taking hold of one's mind. That is not a possibility.",
   "dn34:1.7.68": "Indeed, friend, uprooting the conceit “I am” is the way out of ill will.’",
   "dn34:1.7.69": "These are the six things that are hard to penetrate.",
