--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -382,7 +382,7 @@
   "dn34:1.8.11": "The seven abidings of consciousness—",
   "dn34:1.8.12": "There are beings of diverse bodies and diverse perceptions, namely: humans, some angels, and some beings of fallen birth.",
   "dn34:1.8.13": "This is the first abiding of consciousness.",
-  "dn34:1.8.14": "There are beings of diverse bodies and unified perceptions (XXXHOW TO TRANSLATE \"ekatta\" AS A NOUN HERE IN COMPOUND?XXX), namely: angels of the gods' retinue reborn their from the first [jhāna].",
+  "dn34:1.8.14": "There are beings of diverse bodies and unified perceptions, namely: angels of the gods' retinue reborn there from the first [jhāna].",
   "dn34:1.8.15": "This is the second abiding of consciousness.",
   "dn34:1.8.16": "There are beings of unified bodies and unified perceptions, namely: the radiant angels.",
   "dn34:1.8.17": "This is the third abiding of consciousness.",
