Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -384,7 +384,7 @@
   "dn34:1.8.13": "This is the first abiding of consciousness.",
   "dn34:1.8.14": "There are beings of diverse bodies and unified perception, namely: angels of the gods' retinue reborn there from the first [jhāna].",
   "dn34:1.8.15": "This is the second abiding of consciousness.",
-  "dn34:1.8.16": "There are beings of unified bodies and unified perceptions, namely: the radiant angels.",
+  "dn34:1.8.16": "There are beings of unified bodies and unified perception, namely: the radiant angels.",
   "dn34:1.8.17": "This is the third abiding of consciousness.",
   "dn34:1.8.18": "There are beings of unified bodies and unified perceptions, namely: the lustrous angels.",
   "dn34:1.8.19": "This is the fourth abiding of consciousness.",
