--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -386,7 +386,7 @@
   "dn34:1.8.15": "This is the second abiding of consciousness.",
   "dn34:1.8.16": "There are beings of unified bodies and unified perception, namely: the radiant angels.",
   "dn34:1.8.17": "This is the third abiding of consciousness.",
-  "dn34:1.8.18": "There are beings of unified bodies and unified perceptions, namely: the lustrous angels.",
+  "dn34:1.8.18": "There are beings of unified bodies and unified perception, namely: the lustrous angels.",
   "dn34:1.8.19": "This is the fourth abiding of consciousness.",
   "dn34:1.8.20": "There are beings who, transcending (XXXIS \"samatikkamā\" \n AN ABLATIVE/INSTRUMENTAL MODIFYING \"sattā\" OR AN GERUND \"having transcended\"?XXX) perceptions of form altogether ... experience (XXXTHE DICTIONARY HAS \"going to, getting to, reaching\" FOR \"upaga\". WHY THE ACTION NOUNS THERE? AND HOW TO TRANSLATE IT?XXX) the sphere of infinite space percipient ‘Space is infinite’.",
   "dn34:1.8.21": "This is the fifth abiding of consciousness.",
