Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -672,7 +672,7 @@
   "pli-tv-kd2:23.1.9": "If he makes this understood by body, by speech, or by body and speech, then the consent has been given. ",
   "pli-tv-kd2:23.1.10": "If he doesn’t make this understood by body, by speech, or by body and speech, then the consent hasn’t been given. ",
   "pli-tv-kd2:23.2.1": "If he’s able to do this, it’s good. ",
-  "pli-tv-kd2:23.2.2": "If not, then the sick monk should be brought into the midst of the Sangha together with his bed or bench, and the procedure can then be done. ",
+  "pli-tv-kd2:23.2.2": "If he’s not, then the sick monk should be brought into the midst of the Sangha together with his bed or bench, and the procedure can then be done. ",
   "pli-tv-kd2:23.2.3": "But if the one who is nursing the sick monk says, ",
   "pli-tv-kd2:23.2.4": "ʻIf we move him, his illness will get worse, or he’ll die,’ then the sick monk shouldn’t be moved. ",
   "pli-tv-kd2:23.2.5": "The Sangha should go to where the sick monk is and do the procedure there. ",
