--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -382,7 +382,7 @@
   "pli-tv-kd4:6.3.14": "Those monks should straightaway send one monk to a neighboring monastery: ",
   "pli-tv-kd4:6.3.15": "ʻGo and make amends for this offense. When you return, we’ll make amends for it in your presence.’ ",
   "pli-tv-kd4:6.3.16": "If he’s able to do so, it’s good. ",
-  "pli-tv-kd4:6.3.17": "If not, then a competent and capable monk should inform the Sangha: ",
+  "pli-tv-kd4:6.3.17": "If he’s not, then a competent and capable monk should inform the Sangha: ",
   "pli-tv-kd4:6.3.18": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd4:6.3.19": "This whole sangha has committed the same offense. ",
   "pli-tv-kd4:6.3.20": "When the Sangha sees another monk who is pure and free from offenses, it should make amends for this offense in his presence.’ ",
