--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -622,7 +622,7 @@
   "pli-tv-kd2:22.1.10": "If he doesn’t make this understood by body, by speech, or by body and speech, then the purity hasn’t been passed on. ",
   "pli-tv-kd2:22.2.1": "If he’s able to do this, it’s good. ",
   "pli-tv-kd2:22.2.2": "If he’s not, then the sick monk should be brought into the midst of the Sangha together with his bed or bench. They can then do the observance-day procedure. ",
-  "pli-tv-kd2:22.2.3": "But if the one who is nursing the sick monk says, ",
+  "pli-tv-kd2:22.2.3": "But if the one who is nursing him says, ",
   "pli-tv-kd2:22.2.4": "ʻIf we move him, his illness will get worse, or he’ll die,’ then the sick monk shouldn’t be moved. ",
   "pli-tv-kd2:22.2.5": "The Sangha should go to where the sick monk is and do the observance-day procedure there. ",
   "pli-tv-kd2:22.2.6": "But you should not do the observance-day procedure with an incomplete Sangha. ",
