--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -627,7 +627,7 @@
   "pli-tv-kd2:22.2.5": "The Sangha should go to where the sick monk is and do the observance-day procedure there. ",
   "pli-tv-kd2:22.2.6": "You should not do the observance-day procedure with an incomplete Sangha. ",
   "pli-tv-kd2:22.2.7": "If you do, you commit an offense of wrong conduct. ",
-  "pli-tv-kd2:22.3.1": "“If, after the purity has been passed on to him, the monk who is conveying the purity departs right there, then the purity should be passed on to another. ",
+  "pli-tv-kd2:22.3.1": "“If, after the purity has been passed on to him, the monk who is conveying the purity departs, then the purity should be passed on to another. ",
   "pli-tv-kd2:22.3.2": "If, after the purity has been passed on to him, the monk who is conveying the purity disrobes right there, ",
   "pli-tv-kd2:22.3.3": "dies right there, ",
   "pli-tv-kd2:22.3.4": "admits right there that he’s a novice monk, ",
