--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -632,7 +632,7 @@
   "pli-tv-kd2:22.3.3": "dies right then and there, ",
   "pli-tv-kd2:22.3.4": "admits right then and there that he’s a novice monk, ",
   "pli-tv-kd2:22.3.5": "admits right then and there that he’s renounced the training, ",
-  "pli-tv-kd2:22.3.6": "admits right there that he’s committed the worst kind of offense, ",
+  "pli-tv-kd2:22.3.6": "admits right then and there that he’s committed the worst kind of offense, ",
   "pli-tv-kd2:22.3.7": "admits right there that he’s insane, ",
   "pli-tv-kd2:22.3.8": "admits right there that he’s deranged, ",
   "pli-tv-kd2:22.3.9": "admits right there that he’s overwhelmed by pain, ",
