Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -635,7 +635,7 @@
   "pli-tv-kd2:22.3.6": "admits right then and there that he’s committed the worst kind of offense, ",
   "pli-tv-kd2:22.3.7": "admits right then and there that he’s insane, ",
   "pli-tv-kd2:22.3.8": "admits right then and there that he’s deranged, ",
-  "pli-tv-kd2:22.3.9": "admits right there that he’s overwhelmed by pain, ",
+  "pli-tv-kd2:22.3.9": "admits right then and there that he’s overwhelmed by pain, ",
   "pli-tv-kd2:22.3.10": "admits right there that he’s been ejected for not recognizing an offense, ",
   "pli-tv-kd2:22.3.11": "admits right there that he’s been ejected for not making amends for an offense, ",
   "pli-tv-kd2:22.3.12": "admits right there that he’s been ejected for not giving up a bad view, ",
