--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -639,7 +639,7 @@
   "pli-tv-kd2:22.3.10": "admits right then and there that he’s been ejected for not recognizing an offense, ",
   "pli-tv-kd2:22.3.11": "admits right then and there that he’s been ejected for not making amends for an offense, ",
   "pli-tv-kd2:22.3.12": "admits right then and there that he’s been ejected for not giving up a bad view, ",
-  "pli-tv-kd2:22.3.13": "admits right there that he’s a _paṇḍaka_, ",
+  "pli-tv-kd2:22.3.13": "admits right then and there that he’s a _paṇḍaka_, ",
   "pli-tv-kd2:22.3.14": "admits right there that he’s living in the community by theft, ",
   "pli-tv-kd2:22.3.15": "admits right there that he’s previously left to join the monastics of another religion, ",
   "pli-tv-kd2:22.3.16": "admits right there that he’s an animal, ",
