Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -644,7 +644,7 @@
   "pli-tv-kd2:22.3.15": "admits right then and there that he’s previously left to join the monastics of another religion, ",
   "pli-tv-kd2:22.3.16": "admits right then and there that he’s an animal, ",
   "pli-tv-kd2:22.3.17": "admits right then and there that he’s a matricide, ",
-  "pli-tv-kd2:22.3.18": "admits right there that he’s a patricide, ",
+  "pli-tv-kd2:22.3.18": "admits right then and there that he’s a patricide, ",
   "pli-tv-kd2:22.3.19": "admits right there that he’s a murderer of a perfected one, ",
   "pli-tv-kd2:22.3.20": "admits right there that he’s raped a nun, ",
   "pli-tv-kd2:22.3.21": "admits right there that he’s caused a schism in the Sangha, ",
