--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -645,7 +645,7 @@
   "pli-tv-kd2:22.3.16": "admits right then and there that he’s an animal, ",
   "pli-tv-kd2:22.3.17": "admits right then and there that he’s a matricide, ",
   "pli-tv-kd2:22.3.18": "admits right then and there that he’s a patricide, ",
-  "pli-tv-kd2:22.3.19": "admits right there that he’s a murderer of a perfected one, ",
+  "pli-tv-kd2:22.3.19": "admits right then and there that he’s a murderer of a perfected one, ",
   "pli-tv-kd2:22.3.20": "admits right there that he’s raped a nun, ",
   "pli-tv-kd2:22.3.21": "admits right there that he’s caused a schism in the Sangha, ",
   "pli-tv-kd2:22.3.22": "admits right there that he’s caused the Buddha to bleed, ",
