--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -647,8 +647,8 @@
   "pli-tv-kd2:22.3.18": "admits right then and there that he’s a patricide, ",
   "pli-tv-kd2:22.3.19": "admits right then and there that he’s a murderer of a perfected one, ",
   "pli-tv-kd2:22.3.20": "admits right then and there that he’s raped a nun, ",
-  "pli-tv-kd2:22.3.21": "admits right there that he’s caused a schism in the Sangha, ",
-  "pli-tv-kd2:22.3.22": "admits right there that he’s caused the Buddha to bleed, ",
+  "pli-tv-kd2:22.3.21": "admits right then and there that he’s caused a schism in the Sangha, ",
+  "pli-tv-kd2:22.3.22": "admits right then and there that he’s caused the Buddha to bleed, ",
   "pli-tv-kd2:22.3.23": "or admits right there that he’s a hermaphrodite, then the purity should be passed on to another. ",
   "pli-tv-kd2:22.4.1": "If, after the purity has been passed on to him, the monk who is conveying the purity departs while on his way to the observance-day procedure, then the purity hasn’t been brought. ",
   "pli-tv-kd2:22.4.2": "If, after the purity has been passed on to him, the monk who is conveying the purity disrobes while on his way to the observance-day procedure … ",
