--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -681,7 +681,7 @@
   "pli-tv-kd2:23.3.1": "“If, after the consent has been given to him, the monk who is conveying the consent departs right then and there, then the consent should be given to another. ",
   "pli-tv-kd2:23.3.2": "If, after the consent has been given to him, the monk who is conveying the consent disrobes right then and there, ",
   "pli-tv-kd2:23.3.3": "dies right then and there, ",
-  "pli-tv-kd2:23.3.4": "admits right there that he’s a novice monk, ",
+  "pli-tv-kd2:23.3.4": "admits right then and there that he’s a novice monk, ",
   "pli-tv-kd2:23.3.5": "admits right there that he’s renounced the training, ",
   "pli-tv-kd2:23.3.6": "admits right there that he’s committed the worst kind of offense, ",
   "pli-tv-kd2:23.3.7": "admits right there that he’s insane, ",
