--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -685,7 +685,7 @@
   "pli-tv-kd2:23.3.5": "admits right then and there that he’s renounced the training, ",
   "pli-tv-kd2:23.3.6": "admits right then and there that he’s committed the worst kind of offense, ",
   "pli-tv-kd2:23.3.7": "admits right then and there that he’s insane, ",
-  "pli-tv-kd2:23.3.8": "admits right there that he’s deranged, ",
+  "pli-tv-kd2:23.3.8": "admits right then and there that he’s deranged, ",
   "pli-tv-kd2:23.3.9": "admits right there that he’s overwhelmed by pain, ",
   "pli-tv-kd2:23.3.10": "admits right there that he’s been ejected for not recognizing an offense, ",
   "pli-tv-kd2:23.3.11": "admits right there that he’s been ejected for not making amends for an offense, ",
