Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -698,7 +698,7 @@
   "pli-tv-kd2:23.3.18": "admits right then and there that he’s a patricide, ",
   "pli-tv-kd2:23.3.19": "admits right then and there that he’s a murderer of a perfected one, ",
   "pli-tv-kd2:23.3.20": "admits right then and there that he’s raped a nun, ",
-  "pli-tv-kd2:23.3.21": "admits right there that he’s caused a schism in the Sangha, ",
+  "pli-tv-kd2:23.3.21": "admits right then and there that he’s caused a schism in the Sangha, ",
   "pli-tv-kd2:23.3.22": "admits right there that he’s caused the Buddha to bleed, ",
   "pli-tv-kd2:23.3.23": "or admits right there that he’s a hermaphrodite, then the consent should be given to another. ",
   "pli-tv-kd2:23.3.24": "If, after the consent has been given to him, the monk who is conveying the consent departs while on his way to the legal procedure, then the consent hasn’t been brought. ",
