--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -122,7 +122,7 @@
   "pli-tv-kd4:3.4.5": "The Sangha should go to where the sick monk is and do the invitation procedure there. ",
   "pli-tv-kd4:3.4.6": "But you should not do the invitation procedure with an incomplete Sangha. ",
   "pli-tv-kd4:3.4.7": "If you do, you commit an offense of wrong conduct. ",
-  "pli-tv-kd4:3.5.1": "“If, after the invitation has been passed on to him, the monk who is conveying the invitation departs right there, then the invitation should be passed on to another. ",
+  "pli-tv-kd4:3.5.1": "“If, after the invitation has been passed on to him, the monk who is conveying the invitation departs right then and there, then the invitation should be passed on to another. ",
   "pli-tv-kd4:3.5.2": "If, after the invitation has been passed on to him, the monk who is conveying the invitation disrobes right there, ",
   "pli-tv-kd4:3.5.3": "dies right there, ",
   "pli-tv-kd4:3.5.4": "admits right there that he’s a novice monk, ",
