Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -123,7 +123,7 @@
   "pli-tv-kd4:3.4.6": "But you should not do the invitation procedure with an incomplete Sangha. ",
   "pli-tv-kd4:3.4.7": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd4:3.5.1": "“If, after the invitation has been passed on to him, the monk who is conveying the invitation departs right then and there, then the invitation should be passed on to another. ",
-  "pli-tv-kd4:3.5.2": "If, after the invitation has been passed on to him, the monk who is conveying the invitation disrobes right there, ",
+  "pli-tv-kd4:3.5.2": "If, after the invitation has been passed on to him, the monk who is conveying the invitation disrobes right then and there, ",
   "pli-tv-kd4:3.5.3": "dies right there, ",
   "pli-tv-kd4:3.5.4": "admits right there that he’s a novice monk, ",
   "pli-tv-kd4:3.5.5": "admits right there that he’s renounced the training, ",
