--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -125,7 +125,7 @@
   "pli-tv-kd4:3.5.1": "“If, after the invitation has been passed on to him, the monk who is conveying the invitation departs right then and there, then the invitation should be passed on to another. ",
   "pli-tv-kd4:3.5.2": "If, after the invitation has been passed on to him, the monk who is conveying the invitation disrobes right then and there, ",
   "pli-tv-kd4:3.5.3": "dies right then and there, ",
-  "pli-tv-kd4:3.5.4": "admits right there that he’s a novice monk, ",
+  "pli-tv-kd4:3.5.4": "admits right then and there that he’s a novice monk, ",
   "pli-tv-kd4:3.5.5": "admits right there that he’s renounced the training, ",
   "pli-tv-kd4:3.5.6": "admits right there that he’s committed the worst kind of offense, ",
   "pli-tv-kd4:3.5.7": "admits right there that he’s insane, ",
