--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -129,7 +129,7 @@
   "pli-tv-kd4:3.5.5": "admits right then and there that he’s renounced the training, ",
   "pli-tv-kd4:3.5.6": "admits right then and there that he’s committed the worst kind of offense, ",
   "pli-tv-kd4:3.5.7": "admits right then and there that he’s insane, ",
-  "pli-tv-kd4:3.5.8": "admits right there that he’s deranged, ",
+  "pli-tv-kd4:3.5.8": "admits right then and there that he’s deranged, ",
   "pli-tv-kd4:3.5.9": "admits right there that he’s overwhelmed by pain, ",
   "pli-tv-kd4:3.5.10": "admits right there that he’s been ejected for not recognizing an offense, ",
   "pli-tv-kd4:3.5.11": "admits right there that he’s been ejected for not making amends for an offense, ",
