--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -134,7 +134,7 @@
   "pli-tv-kd4:3.5.10": "admits right then and there that he’s been ejected for not recognizing an offense, ",
   "pli-tv-kd4:3.5.11": "admits right then and there that he’s been ejected for not making amends for an offense, ",
   "pli-tv-kd4:3.5.12": "admits right then and there that he’s been ejected for not giving up a bad view, ",
-  "pli-tv-kd4:3.5.13": "admits right there that he’s a _paṇḍaka_, ",
+  "pli-tv-kd4:3.5.13": "admits right then and there that he’s a _paṇḍaka_, ",
   "pli-tv-kd4:3.5.14": "admits right there that he’s living in the community by theft, ",
   "pli-tv-kd4:3.5.15": "admits right there that he’s previously left to join the monastics of another religion, ",
   "pli-tv-kd4:3.5.16": "admits right there that he’s an animal, ",
