--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -138,7 +138,7 @@
   "pli-tv-kd4:3.5.14": "admits right then and there that he’s living in the community by theft, ",
   "pli-tv-kd4:3.5.15": "admits right then and there that he’s previously left to join the monastics of another religion, ",
   "pli-tv-kd4:3.5.16": "admits right then and there that he’s an animal, ",
-  "pli-tv-kd4:3.5.17": "admits right there that he’s a matricide, ",
+  "pli-tv-kd4:3.5.17": "admits right then and there that he’s a matricide, ",
   "pli-tv-kd4:3.5.18": "admits right there that he’s a patricide, ",
   "pli-tv-kd4:3.5.19": "admits right there that he’s a murderer of a perfected one, ",
   "pli-tv-kd4:3.5.20": "admits right there that he’s raped a nun … ",
