--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -142,7 +142,7 @@
   "pli-tv-kd4:3.5.18": "admits right then and there that he’s a patricide, ",
   "pli-tv-kd4:3.5.19": "admits right then and there that he’s a murderer of a perfected one, ",
   "pli-tv-kd4:3.5.20": "admits right then and there that he’s raped a nun … ",
-  "pli-tv-kd4:3.5.21": "admits right there that he’s caused a schism in the Sangha, ",
+  "pli-tv-kd4:3.5.21": "admits right then and there that he’s caused a schism in the Sangha, ",
   "pli-tv-kd4:3.5.22": "admits right there that he’s caused the Buddha to bleed, ",
   "pli-tv-kd4:3.5.23": "or admits right there that he’s a hermaphrodite, then the invitation should be passed on to another. ",
   "pli-tv-kd4:3.5.24": "If, after the invitation has been passed on to him, the monk who is conveying the invitation departs while on his way to the invitation procedure, then the invitation hasn’t been brought. ",
