Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -402,7 +402,7 @@
   "pli-tv-kd2:15.7.7": "A competent and capable monk should inform the Sangha: ",
   "pli-tv-kd2:15.7.8": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd2:15.7.9": "If it seems appropriate to the Sangha, so-and-so will question so-and-so on the Monastic Law.’ ",
-  "pli-tv-kd2:15.7.10": "In this way you are approved through another.” ",
+  "pli-tv-kd2:15.7.10": "In this way you are approved through someone else.” ",
   "pli-tv-kd2:15.8.1": "Soon good monks asked questions on the Monastic Law in the midst of the Sangha after being approved. ",
   "pli-tv-kd2:15.8.2": "The monks from the group of six became angry and bitter, and they made threats of violence. ",
   "pli-tv-kd2:15.8.4": "“The monk who has been approved should first survey the gathering and evaluate the individuals, and then ask questions on the Monastic Law in the midst of the Sangha.” ",
