--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -418,7 +418,7 @@
   "pli-tv-kd2:15.10.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd2:15.10.4": "If it seems appropriate to the Sangha, I will reply when asked by so-and-so on the Monastic Law.’ ",
   "pli-tv-kd2:15.10.5": "In this way you are approved through yourself. ",
-  "pli-tv-kd2:15.10.6": "And how are you approved through another? ",
+  "pli-tv-kd2:15.10.6": "And how are you approved through someone else? ",
   "pli-tv-kd2:15.10.7": "A competent and capable monk should inform the Sangha: ",
   "pli-tv-kd2:15.10.8": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd2:15.10.9": "If it seems appropriate to the Sangha, so-and-so will reply when asked by so-and-so on the Monastic Law.’ ",
