--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -422,7 +422,7 @@
   "pli-tv-kd2:15.10.7": "A competent and capable monk should inform the Sangha: ",
   "pli-tv-kd2:15.10.8": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd2:15.10.9": "If it seems appropriate to the Sangha, so-and-so will reply when asked by so-and-so on the Monastic Law.’ ",
-  "pli-tv-kd2:15.10.10": "In this way you are approved through another.” ",
+  "pli-tv-kd2:15.10.10": "In this way you are approved through someone else.” ",
   "pli-tv-kd2:15.11.1": "Soon good monks replied to questions on the Monastic Law in the midst of the Sangha after being approved. ",
   "pli-tv-kd2:15.11.2": "The monks from the group of six became angry and bitter, and they made threats of violence. ",
   "pli-tv-kd2:15.11.4": "“The monk who has been approved should first survey the gathering and evaluate the individuals, and then reply to questions on the Monastic Law in the midst of the Sangha.” ",
