Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -700,7 +700,7 @@
   "pli-tv-kd2:23.3.20": "admits right then and there that he’s raped a nun, ",
   "pli-tv-kd2:23.3.21": "admits right then and there that he’s caused a schism in the Sangha, ",
   "pli-tv-kd2:23.3.22": "admits right then and there that he’s caused the Buddha to bleed, ",
-  "pli-tv-kd2:23.3.23": "or admits right then and there that he’s a hermaphrodite, then the consent should be given to another. ",
+  "pli-tv-kd2:23.3.23": "or admits right then and there that he’s a hermaphrodite, then the consent should be given to someone else. ",
   "pli-tv-kd2:23.3.24": "If, after the consent has been given to him, the monk who is conveying the consent departs while on his way to the legal procedure, then the consent hasn’t been brought. ",
   "pli-tv-kd2:23.3.25": "If, after the consent has been given to him, the monk who is conveying the consent disrobes while on his way to the legal procedure … ",
   "pli-tv-kd2:23.3.26": "or admits that he’s a hermaphrodite while on his way to the legal procedure, then the consent hasn’t been brought. ",
