Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -704,7 +704,7 @@
   "pli-tv-kd2:23.3.24": "If, after the consent has been given to him, the monk who is conveying the consent departs while on his way to the legal procedure, then the consent hasn’t been brought. ",
   "pli-tv-kd2:23.3.25": "If, after the consent has been given to him, the monk who is conveying the consent disrobes while on his way to the legal procedure … ",
   "pli-tv-kd2:23.3.26": "or admits that he’s a hermaphrodite while on his way to the legal procedure, then the consent hasn’t been brought. ",
-  "pli-tv-kd2:23.3.27": "And even if, after the consent has been given to him, the monk who is conveying the consent departs after reaching the Sangha, then the consent has been brought. ",
+  "pli-tv-kd2:23.3.27": "But if, after the consent has been given to him, the monk who is conveying the consent departs after reaching the Sangha, then the consent has been brought. ",
   "pli-tv-kd2:23.3.28": "And even if, after the consent has been given to him, the monk who is conveying the consent disrobes after reaching the Sangha … ",
   "pli-tv-kd2:23.3.29": "admits that he’s a hermaphrodite after reaching the Sangha, then the consent has been brought. ",
   "pli-tv-kd2:23.3.30": "And even if, after the consent has been given to him, the monk who is conveying the consent reaches the Sangha, but doesn’t announce the consent because he falls asleep or is heedless or gains a meditation attainment, then the consent has been brought. ",
