--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -707,7 +707,7 @@
   "pli-tv-kd2:23.3.27": "But if, after the consent has been given to him, the monk who is conveying the consent departs after reaching the Sangha, then the consent has been brought. ",
   "pli-tv-kd2:23.3.28": "And if, after the consent has been given to him, the monk who is conveying the consent disrobes after reaching the Sangha … ",
   "pli-tv-kd2:23.3.29": "admits that he’s a hermaphrodite after reaching the Sangha, then the consent has been brought. ",
-  "pli-tv-kd2:23.3.30": "And even if, after the consent has been given to him, the monk who is conveying the consent reaches the Sangha, but doesn’t announce the consent because he falls asleep or is heedless or gains a meditation attainment, then the consent has been brought. ",
+  "pli-tv-kd2:23.3.30": "And if, after the consent has been given to him, the monk who is conveying the consent reaches the Sangha, but doesn’t announce the consent because he falls asleep or is heedless or gains a meditation attainment, then the consent has been brought. ",
   "pli-tv-kd2:23.3.31": "And there’s no offense for the one who is conveying the consent. ",
   "pli-tv-kd2:23.3.32": "And if, after the consent has been given to him, the monk who is conveying the consent reaches the Sangha, but deliberately doesn’t announce the consent, then the consent has been brought. ",
   "pli-tv-kd2:23.3.33": "But there is an offense of wrong conduct for the one who is conveying the consent. ",
