Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -191,7 +191,7 @@
   "pli-tv-kd4:3.5.67": "admits that he’s caused a schism in the Sangha, ",
   "pli-tv-kd4:3.5.68": "admits that he’s caused the Buddha to bleed, ",
   "pli-tv-kd4:3.5.69": "or admits that he’s a hermaphrodite after reaching the Sangha, then the invitation has been brought. ",
-  "pli-tv-kd4:3.5.70": "And even if, after the invitation has been passed on to him, the monk who is conveying the invitation reaches the Sangha, but doesn’t announce the invitation because he falls asleep, then the invitation has been brought. ",
+  "pli-tv-kd4:3.5.70": "And if, after the invitation has been passed on to him, the monk who is conveying the invitation reaches the Sangha, but doesn’t announce the invitation because he falls asleep, then the invitation has been brought. ",
   "pli-tv-kd4:3.5.71": "And there’s no offense for the one who is conveying the invitation. ",
   "pli-tv-kd4:3.5.72": "And even if, after the invitation has been passed on to him, the monk who is conveying the invitation reaches the Sangha, but doesn’t announce the invitation because he is heedless ",
   "pli-tv-kd4:3.5.73": "or because he gains a meditation attainment, then the invitation has been brought. ",
