Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -181,5 +181,6 @@
   "mn35:24.1": "Ma Saccaka gli disse:",
   "mn35:24.2": "“Aspetta Dummukha, aspetta! Non stavo parlando con te, stavo parlando col Maestro Gotama.",
   "mn35:24.3": "Maestro Gotama, lascia stare quella dichiarazione che ho fatto—che hanno fatto anche altri asceti e bramini—",
-  "mn35:24.4": "Era solo una sciocchezza."
+  "mn35:24.4": "Era solo una sciocchezza.",
+  "mn35:24.5": "Come definisce un discepolo del Maestro Gotama che segue le istruzioni e risponde ai consigli; che è andato oltre al dubbio, si è liberato dell'indecisione, ha ottenuto garanzia, ed è indipendente dagli altri nelle istruzioni del Maestro?”"
 }
