Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -198,5 +198,6 @@
   "mn35:25.7": "Così si definisce un mendicante perfetto, con contaminanti eliminati, che ha completato il percorso spirituale, fatto ciò che c'era da fare, riposto il fardello, raggiunto il proprio vero obiettivo, assolutamente eliminato le catene dell'esistenza, ed è giustamente libero attraverso la realizzazione.",
   "mn35:26.1": "Un mendicante la cui mente è libera così possiede tre qualità insuperabili:",
   "mn35:26.2": "visione insuperabile, pratica insuperabile, e libertà insuperabile.",
-  "mn35:26.3": "Onora, rispetta, stima, e venera solo il Realizzato:"
+  "mn35:26.3": "Onora, rispetta, stima, e venera solo il Realizzato:",
+  "mn35:26.4": "‘Il Beato è risvegliato, domato, sereno, andato oltre, ed estinto. E spiega l'insegnamento per il risveglio, autocontrollo, serenità, per andare oltre, e per l'estinzione.’”"
 }
