Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -200,5 +200,5 @@
   "mn35:26.2": "visione insuperabile, pratica insuperabile, e libertà insuperabile.",
   "mn35:26.3": "Onora, rispetta, stima, e venera solo il Realizzato:",
   "mn35:26.4": "‘Il Beato è risvegliato, domato, sereno, andato oltre, ed estinto. E spiega l'insegnamento per il risveglio, autocontrollo, serenità, per andare oltre, e per l'estinzione.’”",
-  "mn35:27.1": "Detto ciò, Saccaka gli disse:"
+  "mn35:27.1": "Detto ciò, Saccaka disse al Buddha:"
 }
