Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -207,5 +207,6 @@
   "mn35:27.5": "Potrebbe trovare sicurezza dopo aver attaccato una vipera velenosa, ma non dopo aver attaccato il Maestro Gotama.",
   "mn35:27.6": "È stato rude ed impudente da parte mia immaginare di attaccarla in dibattito.",
   "mn35:27.7": "Il Maestro Gotama accetterebbe il pasto di domani insieme alla comunità di mendicanti da parte mia?”",
-  "mn35:27.8": "Il Buddha acconsentì in silenzio."
+  "mn35:27.8": "Il Buddha acconsentì in silenzio.",
+  "mn35:28.1": "Quindi, sapendo che il Buddha aveva accettato, Saccaka si rivolse ai Licchavi,"
 }
