Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -217,5 +217,6 @@
   "mn35:30.1": "Allora al mattino il Buddha si vestì, prese la propria ciotola e tunica, andò al parco di Saccaka, e si sedette al posto preparato insieme alla comunità di mendicanti.",
   "mn35:30.2": "Poi Saccaka servì e soddisfece la comunità di mendicanti guidata dal Buddha con le proprie mani con vari cibi deliziosi.",
   "mn35:30.3": "Una volta che il Buddha ebbe mangiato ed ebbe lavato mani e ciotola, Saccaka si sedette su un posto basso a lato.",
-  "mn35:30.4": "Poi disse al Buddha:"
+  "mn35:30.4": "Poi disse al Buddha:",
+  "mn35:30.5": "“Maestro Gotama, che il merito e la crescita di merito per questa offerta siano in nome della gioia dei donatori.”"
 }
