Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -729,7 +729,7 @@
   "pli-tv-kd2:24.3.1": "“If a monk is seized by kings on the observance day … ",
   "pli-tv-kd2:24.3.2": "is seized by bandits…  ",
   "pli-tv-kd2:24.3.3": "is seized by scoundrels … ",
-  "pli-tv-kd2:24.3.4": "or by enemies of monks on the observance day, other monks should say to those enemies, ",
+  "pli-tv-kd2:24.3.4": "is seized by enemies of monks on the observance day, other monks should say to those enemies, ",
   "pli-tv-kd2:24.3.5": "ʻPlease release this monk for a short time, so that he can take part in the observance-day procedure.’ ",
   "pli-tv-kd2:24.3.6": "If they’re able to do this, it’s good. ",
   "pli-tv-kd2:24.3.7": "If not, they should say to those enemies, ",
