Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -765,7 +765,7 @@
   "pli-tv-kd2:25.4.6": "Any monk who approves of this agreement ",
   "pli-tv-kd2:25.4.7": "should remain silent. ",
   "pli-tv-kd2:25.4.8": "Any monk who doesn’t approve should speak up. ",
-  "pli-tv-kd2:25.4.9": "The Sangha has agreed in regard to the insanity of the monk Gagga. ",
+  "pli-tv-kd2:25.4.9": "The Sangha has agreed on the following in regard to the insanity of the monk Gagga: ",
   "pli-tv-kd2:25.4.11": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
   "pli-tv-kd2:26.1.0": "24. Various kinds of observance days for the Sangha, etc. ",
   "pli-tv-kd2:26.1.1": "At one time on the observance day, there were four monks staying in a certain monastery. ",
