Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -804,7 +804,7 @@
   "pli-tv-kd2:26.6.4": "Please remember me as pure.’ ",
   "pli-tv-kd2:26.6.5": "And he should repeat this two more times. ",
   "pli-tv-kd2:26.7.1": "The junior monk should put his upper robe over one shoulder, squat on his heels, raise his joined palms, and say to the senior monk: ",
-  "pli-tv-kd2:26.7.2": "ʻI’m pure, Venerable; ",
+  "pli-tv-kd2:26.7.2": "ʻI’m pure, Venerable. ",
   "pli-tv-kd2:26.7.3": "please remember me as pure.’ ",
   "pli-tv-kd2:26.7.4": "And he should repeat this two more times.” ",
   "pli-tv-kd2:26.8.1": "At one time on the observance day, a monk was staying in a certain monastery by himself. ",
