Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -332,7 +332,7 @@
   "pli-tv-kd4:5.9.5": "Wherever three monks are staying together, two shouldn’t do the invitation procedure with each other while bringing the invitation of one. ",
   "pli-tv-kd4:5.9.6": "If you do the invitation in this way, you commit an offense of wrong conduct. ",
   "pli-tv-kd4:5.9.7": "Wherever two monks are staying together, one shouldn’t make a determination while bringing the invitation of one. ",
-  "pli-tv-kd4:5.9.8": "If you make a determination in this way, you commit an offense of wrong conduct.” ",
+  "pli-tv-kd4:5.9.8": "If you do make a determination, you commit an offense of wrong conduct.” ",
   "pli-tv-kd4:6.1.0": "6. The process for making amends for an offense ",
   "pli-tv-kd4:6.1.1": "At one time on the invitation day a certain monk had committed an offense. ",
   "pli-tv-kd4:6.1.2": "He thought, ",
