Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -309,7 +309,7 @@
   "dn34:1.7.33": "What are the six things that are hard to penetrate?",
   "dn34:1.7.34": "The six elements leading to a way out—",
   "dn34:1.7.35": "Here, a monk might speak thus:",
-  "dn34:1.7.36": "‘Truly, freedom of mind through loving-kindness is, for me, cultivated, exercised, deeply experienced, fortified, and undertaken well. It has been made my vehicle and my foundation. (XXXCOULD I TRANSLATE THE GENATIVE \"ME\" HERE AS \"I HAVE\"? - Truly, I have cultivated freedom of mind through loving-kindness. I have exercised it, deeply experienced it, fortified it, and undertaken it well. I have made it my vehicle and my foundation.XXXYES!!!!)",
+  "dn34:1.7.36": "‘Truly, I have cultivated freedom of mind through loving-kindness. I have exercised it, deeply experienced it, fortified it, and undertaken it well. I have made it my vehicle and my foundation.",
   "dn34:1.7.37": "But still, ill will persists in taking hold of my mind.’",
   "dn34:1.7.38": "He should be told: ‘Not so! Venerable, don't speak thus! Do not misrepresent the Blessed One. Misrepresenting the Blessed One is not good. Surely the Blessed One would not speak thus!",
   "dn34:1.7.39": "Friend, it is not possible, there is no way, when freedom of mind through loving-kindness has been cultivated, exercised, deeply experienced, fortified, undertaken well, and when it has been made one's vehicle and one's foundation, that",
