Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -451,5 +451,6 @@
   "dn34:2.1.3": "There are eight causes, eight supports that lead to acquiring the unacquired discernment that is foundational to one living the holy life, and to furthering, increasing, cultivating, and fulfilling that which has been acquired. (XXXTRANSLATING THESE DATIVES AS ACTION NOUNS?XXX)",
   "dn34:2.1.4": "What eight?",
   "dn34:2.1.5": "Here, a monk dwells in dependence on a teacher or on a certain one of his fellows in the holy life in the place of a teacher and he is consistently grounded with an intense sense of conscience, imperative propriety, love, and respect for them.",
-  "dn34:2.1.6": "This is the first cause, the first support that leads to acquiring the unacquired discernment that is foundational to one living the holy life, and to furthering, increasing, cultivating, and fulfilling that which has been acquired."
+  "dn34:2.1.6": "This is the first cause, the first support that leads to acquiring the unacquired discernment that is foundational to one living the holy life, and to furthering, increasing, cultivating, and fulfilling that which has been acquired.",
+  "dn34:2.1.7": "While dwelling in dependence on a teacher or on a certain one of his fellows in the holy life in the place of a teacher and while consistently grounded with an intense sense of conscience, imperative propriety, love, and respect for them, he further, from time to time, approaches them and inquires and asks questions:"
 }
