Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -455,5 +455,5 @@
   "dn34:2.1.7": "While dwelling in dependence on a teacher or on a certain one of his fellows in the holy life in the place of a teacher and while consistently grounded with an intense sense of conscience, imperative propriety, love, and respect for them, he further, from time to time, approaches them and inquires and asks questions:",
   "dn34:2.1.8": "‘Venerable, why it this as it is?",
   "dn34:2.1.9": "What is the meaning of this?’",
-  "dn34:2.1.10": "That Venerable clarifies what was unclear for him, elucidates what was obscure, and through various means dispels doubt regarding dubious things."
+  "dn34:2.1.10": "That Venerable clarifies what was unclear, elucidates what was obscure, and through various means dispels his doubt regarding dubious things."
 }
